# LRA_Raspberry4b

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  makefile
Driver/Setting/: LRA_DRV2605L_Init.cpp
Include/: LRA_DRV2605L.cpp  LRA_DRV2605L.h  LRA_ErrorCode.cpp  LRA_ErrorCode.h
Test/GPIO/: pull_test  pull_test.c
Test/I2C/: I2C_test.c
inc/: LRA_DRV2605L.h  LRA_ErrorCode.h  LRA_PI_Util.h
inc/ADXL345/: ADXL355.h
inc/ADXL355/: ADXL355.h
inc/DRV2605L/: LRA_DRV2605L.h
inc/DRV2605L_TCA/: DRV2605L_TCA.h
inc/Data/: Data.h
inc/ErrorCode/: LRA_ErrorCode.h
inc/I2c/: i2c.h
inc/MPU6050/: MPU6050.h
inc/PI/: LRA_PI_Util.h
inc/TCPIP/: TCPIP.h
lib/: LRA_DRV2605L.cpp  LRA_ErrorCode.cpp  LRA_PI_Util.cpp
src/: CMakeLists.txt
src/Base/DRV2605L/: LRA_DRV2605L.cpp
src/Base/ErrorCode/: LRA_ErrorCode.cpp
src/Base/PI/: LRA_PI_Util.cpp
src/Lib/: CMakeLists.txt
src/Lib/ADXL345/: ADXL345.cpp  CMakeLists.txt
src/Lib/ADXL355/: ADXL355.cpp  CMakeLists.txt
src/Lib/DRV2605L/: CMakeLists.txt  LRA_DRV2605L.cpp
src/Lib/DRV2605L_TCA/: CMakeLists.txt  DRV2605L_TCA.cpp
src/Lib/Data/: CMakeLists.txt  Data.cpp
src/Lib/ErrorCode/: CMakeLists.txt  LRA_ErrorCode.cpp
src/Lib/I2c/: CMakeLists.txt  i2c.c
src/Lib/MPU6050/: CMakeLists.txt  MPU6050.cpp
src/Lib/PI/: CMakeLists.txt  LRA_PI_Util.cpp
src/Lib/Sensor/: CMakeLists.txt
src/Lib/TCPIP/: CMakeLists.txt  TCPIP.cpp
src/Lib/i2c/: i2c.c
src/Setting/: CMakeLists.txt  LRA_DRV2605L_Init.cpp
src/Test/: CMakeLists.txt
src/Test/ADXL355/: ADXL355_Read_Test.cpp  CMakeLists.txt
src/Test/I2C/: I2C_test  I2C_test.c
src/Test/Only_DRV_TCA/: CMakeLists.txt  Only_DRV_TCA.cpp
src/Test/Single_DRV_TCA/: Acc.txt  CMakeLists.txt  RTP.txt  Single_DRV_TCA_readtest.cpp
src/Test/TCPIP/: CMakeLists.txt  LRA_Client.c  LRA_Server.c  LRA_TCPIP.h
src/Test/TCPIP_with_DRV/: CMakeLists.txt  TCPIP_with_DRV.cpp
src/lib/: LRA_DRV2605L.cpp  LRA_ErrorCode.cpp  LRA_PI_Util.cpp
src/test/I2C/: I2C_test.c
test/: CMakeLists.txt
test/DB-test/: .gitignore
test/DB-test/Connection/: MariaDB_Connection.cpp  compile.sh  dbconnection
test/DB-test/Write/: MariaDB_Write.cpp  compile.sh  dbwrite
