# add sub dir
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DRV2605L)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ErrorCode)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/PI)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/I2c)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/MPU6050)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ADXL345)